[package]
name = "shallow-debug"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Dertoni"]
description = "A basic Debug derive macro that can be used on any type"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/GabrielDertoni/shallow-debug"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
syn = "2.0.10"

[lib]
proc-macro = true
